log
Fri Mar 27 05:35:40 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
1c1d64c
Fri Mar 27 05:53:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:102:22: error: ‘new’ undeclared (first use in this function)
  102 |         list->head = new;
      |                      ^~~
list.c:102:22: note: each undeclared identifier is reported only once for each function it appears in
list.c:100:12: error: unused variable ‘newNodo’ [-Werror=unused-variable]
  100 |     Node * newNodo = createNode(data);
      |            ^~~~~~~
cc1: all warnings being treated as errors
36f40f3
Fri Mar 27 05:54:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 60/60
cd37786
